# sftp-explorer

./: .dockerignore  Cargo.toml  Dockerfile  README.MD
backend/: Cargo.toml
backend/src/: main.rs
backend/src/http/: cors.rs  mod.rs
backend/src/sftp/: mod.rs
docker/: Dockerfile
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/: DirectoryExplorer.vue
frontend/src/components/directory/: DirectoryExplorer.vue
src/: lib.rs
src/http/: mod.rs
src/sftp/: mod.rs
static/: index.html
static/css/: app.bc3454cc.css
static/js/: app.d020af7f.js  app.d020af7f.js.map  chunk-vendors.204bc3dc.js  chunk-vendors.204bc3dc.js.map
